# api/openapi-go.json
@@ -3833,199 +3833,6 @@
         ]
       }
     },
-    "/api/personas": {
-      "get": {
-        "responses": {
-          "200": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "items": {
-                    "properties": {
-                      "created_at": {
-                        "format": "date-time",
-                        "type": "string"
-                      },
-                      "id": {
-                        "type": "integer"
-                      },
-                      "name": {
-                        "type": "string"
-                      },
-                      "ppk_employee_rate": {
-                        "type": "string"
-                      },
-                      "ppk_employer_rate": {
-                        "type": "string"
-                      }
-                    },
-                    "type": "object"
-                  },
-                  "type": "array"
-                }
-              }
-            },
-            "description": "OK"
-          }
-        },
-        "summary": "List personas",
-        "tags": [
-          "personas"
-        ]
-      },
-      "post": {
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "properties": {
-                  "name": {
-                    "type": "string"
-                  },
-                  "ppk_employee_rate": {
-                    "nullable": true,
-                    "type": "string"
-                  },
-                  "ppk_employer_rate": {
-                    "nullable": true,
-                    "type": "string"
-                  }
-                },
-                "type": "object"
-              }
-            }
-          },
-          "required": true
-        },
-        "responses": {
-          "201": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "properties": {
-                    "created_at": {
-                      "format": "date-time",
-                      "type": "string"
-                    },
-                    "id": {
-                      "type": "integer"
-                    },
-                    "name": {
-                      "type": "string"
-                    },
-                    "ppk_employee_rate": {
-                      "type": "string"
-                    },
-                    "ppk_employer_rate": {
-                      "type": "string"
-                    }
-                  },
-                  "type": "object"
-                }
-              }
-            },
-            "description": "Created"
-          }
-        },
-        "summary": "Create a persona",
-        "tags": [
-          "personas"
-        ]
-      }
-    },
-    "/api/personas/{id}": {
-      "delete": {
-        "parameters": [
-          {
-            "in": "path",
-            "name": "id",
-            "required": true,
-            "schema": {
-              "type": "integer"
-            }
-          }
-        ],
-        "responses": {
-          "204": {
-            "description": "No Content"
-          }
-        },
-        "summary": "Delete a persona",
-        "tags": [
-          "personas"
-        ]
-      },
-      "put": {
-        "parameters": [
-          {
-            "in": "path",
-            "name": "id",
-            "required": true,
-            "schema": {
-              "type": "integer"
-            }
-          }
-        ],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "properties": {
-                  "name": {
-                    "nullable": true,
-                    "type": "string"
-                  },
-                  "ppk_employee_rate": {
-                    "nullable": true,
-                    "type": "string"
-                  },
-                  "ppk_employer_rate": {
-                    "nullable": true,
-                    "type": "string"
-                  }
-                },
-                "type": "object"
-              }
-            }
-          },
-          "required": true
-        },
-        "responses": {
-          "200": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "properties": {
-                    "created_at": {
-                      "format": "date-time",
-                      "type": "string"
-                    },
-                    "id": {
-                      "type": "integer"
-                    },
-                    "name": {
-                      "type": "string"
-                    },
-                    "ppk_employee_rate": {
-                      "type": "string"
-                    },
-                    "ppk_employer_rate": {
-                      "type": "string"
-                    }
-                  },
-                  "type": "object"
-                }
-              }
-            },
-            "description": "OK"
-          }
-        },
-        "summary": "Update a persona",
-        "tags": [
-          "personas"
-        ]
-      }
-    },
     "/api/retirement/limits/{year}": {
       "get": {
         "parameters": [
